--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,14 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+:root {
+  --font-montserrat: "Montserrat", sans-serif;
+}
+
+body {
+  font-family: var(--font-montserrat);
+}
+
 
 @theme inline {
   --color-background: var(--background);
@@ -22,7 +30,6 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(-10px); }
